// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (jsx-space-before-trailing-slash) /src/tslint-react/jsx-space-before-trailing-slash/test.tsx[1, 1]: Self-closing JSX elements must have a space before the '/>' part

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
<meta/>

======
<meta />;

>>>>>> after
"
`;
